--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ SEARCH_ENDPOINT_API_KEY=secret
 
 GRAPHQL_URL=https://hasura-bots.hasura.app/v1/graphql
 GRAPHQL_ADMIN_SECRET=admin_secret
+
+GUILD_ID=407792526867693568
